--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -118,6 +118,15 @@ a[href|="/fluttersup"] {
     height: 150px;
     background-image: url(%%fluttersup%%)
     }
+a[href|="/twiflutterhappy"], a[href|="/twishyhappy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 207px;
+    height: 200px;
+    background-image: url(%%twiflutterhappy%%)
+    }
+
 /* Animotes - aPNG emotes! */
 
 a[href|="/fluttersmile"], a[href|="/shysmile"] {
