--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -230,6 +230,25 @@
         height: 364px;
         background-image: url(%%rtflick%%)
         }
+
+
+
+    a[href|="/jay"], a[href|="/i01"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 190px;
+        height: 190px;
+        background-image: url(%%jay%%)
+        }
+    a[href|="/rjay"], a[href|="/ri01"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 190px;
+        height: 190px;
+        background-image: url(%%rjay%%)
+        }
   
     /**********************
     *
