--- a/source-css/mylittlenanners.css
+++ b/source-css/mylittlenanners.css
@@ -958,7 +958,7 @@ a[href|="/fruitawut"] {
 *OoTemotes - also known as "WHERE WE DUMP STUFF WITHOUT NANNERS" - and fuck BJ, fuck him hard
 *************
 */
-a[href|="/batman"], a[href|="/dasnice"], a[href|="/opti"], a[href|="/ploot"], a[href|="/oot"], a[href|="/derpysad"], a[href|="/portal1"], a[href|="/portal2"], a[href|="/root"], a[href|="/p18"],a[href|="/onebutt"] {
+a[href|="/batman"], a[href|="/dasnice"], a[href|="/opti"], a[href|="/ploot"], a[href|="/oot"], a[href|="/derpysad"], a[href|="/portal1"], a[href|="/portal2"], a[href|="/root"], a[href|="/p18"], a[href|="/onebutt"], a[href|="/blunafun"] {
     display: block;
 	clear: none;
 	float: left;
@@ -1018,6 +1018,13 @@ a[href|="/p18"] {
     height: 100px;
     background-position:  -491px  -176px
 }
+
+a[href|="/blunafun"] {
+    width: 95px;
+    height: 152px;
+    background-position:  -128px  -123px
+}
+
 
 a[href|="/twisquintlol"] {
     display:block;
