--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -277,6 +277,9 @@ a.author[href$="Calcos323"]:after {
  a.author[href$="candid_canid"]:after {
     content: "SeriouslyCandid";
     }
+ a.author[href$="Bflat13"]:after {
+    content: "SeriouslyASeriousJazzChord";
+    }
 
 /***********************
 *
@@ -424,7 +427,7 @@ a.author[href$="Calcos323"]:after {
 }
 
 body:first-of-type, body.res-nightmode:first-of-type {
-    background: url(%%lunabirthday%%)no-repeat fixed 30% 90% !important
+    background: url(%%serishy%%)no-repeat fixed 30% 90% !important
     }
 
 /***  Sidebar Woona  ***/
@@ -443,7 +446,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 /***  Seriously? This is seriously the Banner?  ***/
 body #header-bottom-left {
     background-color:  #8B6969 !important;
-    background: url(%%lunabanner%%) no-repeat center bottom !important;
+    background: url(%%Banner111%%) no-repeat center bottom !important;
     }
 /*** Bottom page Luna ***/
 .footer-parent {
