--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -167,13 +167,15 @@ a[href$="/spoiler"]:hover {
 #link-desc.infobar:after {
     font-weight: bold;
     display: block;
-    content: "NOTE 1: If there's a critic's livestream going on, please try and get critique there in addition to posting.  Critics often attend livestreams when they're on and thus it leaves submissions sad and lonely.  NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them."
+    content: "NOTE 1: Come on in to the IRC after posting and get your piece critiqued live. NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them.";
+    background-color: #F0F0F0
     }
 
 #text-desc.infobar:after {
     font-weight: bold;
     display: block;
-    content: "NOTE 1: If there's a critic's livestream going on, please try and get critique there in addition to posting.  Critics often attend livestreams when they're on and thus it leaves submissions sad and lonely.  NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them."
+    content: "NOTE 1: Come on in to the IRC after posting and get your piece critiqued live.  NOTE 2: Check the ''new'' queue after submitting your post. If your submission doesn't show up, notify the moderators by messaging them.";
+    background-color: #F0F0F0
     }
 
 
