--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -413,6 +413,21 @@ a.author[href$="tacomantotherescue"]:after {
     letter-spacing: normal
     }
 
+a.author[href$="Beatbawx"] {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px
+    }
+a.author[href$="Beatbawx"]:after {
+    content: "General Faget";
+    font-size: 11px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+    }
+
 a.author[href$="UDNTNOME"] {
     font-size: 0px !important;
     display: inline-block;
