--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -345,3 +345,80 @@ left: 0;
     cursor: pointer;
     content: "Taco";
 }
+
+/* No flair on modbox */
+
+.sidecontentbox .flair {
+  display: none;
+}
+
+/* Greentext */
+
+/* >Implying I stole this from the Plounge */
+
+.content .md h1
+{
+color: #789922;
+border-bottom: none;
+padding-bottom: 0px;
+}
+
+.content .md h1:before
+{
+content: ">";
+}
+
+.md .RESUserTag, .md .RESUserTag + a.voteWeight, .md .RESUserTag + a.voteWeight + div.SuperRedditAltTextDisplay_Text
+{display:none !important;}
+
+body:not(.moderator) input[value="t3_10vuz8"] + .usertext-edit
+{
+ display:none;
+}
+
+a.author[href$="Juz11"] {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px
+    }
+a.author[href$="Juz11"]:after {
+    content: "Juz16";
+    font-size: 10px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+    }
+a.author[href$="Juz19"] {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px
+    }
+a.author[href$="Juz19"]:after {
+    content: "Juz16";
+    font-size: 10px !important;
+    visibility: visible !important;
+    display: block;
+    letter-spacing: normal
+    }
+
+/* Juz (PSST I DEFINITELY DIDN'T STEAL THIS FROM THE PLOUNGE ARE YOU CRAZY PFFFFT) */
+
+#siteTable_t3_15usdv a.author {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px;
+    }
+
+#siteTable_t3_15usdv a.author:after {
+    content: "Juz16";
+    font-size: 10px !important;
+    visibility: visible !important; 
+    display: block;
+    letter-spacing: normal;
+    }
